Fixed UI of laptop view to more closely match Figma

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <div class="row1col left-col">
                     <span><img src = "images/NYT_Basketball.png" class="basketball-img" alt="Basketball Image"></span>
                     <br>
-                    <h2>
+                    <h2 class="thin-h2 top-row">
                         Excepteur sint occaecat cupidatat non proident
                     </h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                         labore et dolore magna aliqua.
                     </p>
                     <hr class = "hr-left">
-                    <h2 class = "tablet-remove">
+                    <h2 class = "tablet-remove thin-h2">
                         Ut enim ad minim veniam, quis nostrud exercitation 
                         ullamco laboris nisi ut aliquip ex ea commodo consequat
                     </h2>
@@ -71,10 +71,10 @@
                     </p>
                     <hr class = "hr-center">
                     <img src="images/NYT_Building.png" class="building-img" alt="Building Image">
-                    <h2 class="center-bottom">
+                    <h3 class="center-bottom">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                    </h2>
-                    <p>
+                    </h3>
+                    <p class="center-bottom">
                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
                         commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
                         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
@@ -83,11 +83,11 @@
                 </div>
                 <div class="row1col right-col">
                     <span><img src = "images/NYT_Food.png" class="food-img" alt="Food Image"></span>  
-                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
+                    <h2 class="thin-h2  top-row">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                         labore et dolore magna aliqua.</p>
                     <hr class = "hr-right">
-                    <h2 class = "tablet-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    <h2 class = "tablet-remove thin-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
                         labore et dolore magna aliqua
                     </h2>
                     <p class = "tablet-remove">
